mzscheme/15154
From bugs+caf_=bugs=bugs.plt-scheme.org@plt-scheme.org Wed Sep 16 01:03:41 2015
Received: from mail-io0-f177.google.com (mail-io0-f177.google.com [209.85.223.177])
	by winooski.ccs.neu.edu (8.14.7/8.14.7) with ESMTP id t8G53V22010604
	for <bugs@bugs.plt-scheme.org>; Wed, 16 Sep 2015 01:03:31 -0400
Message-Id: <201509160503.t8G53SAj010581@winooski.ccs.neu.edu>
Date: Wed, 16 Sep 2015 01:03:28 -0400
From: floss@apjanke.net
To: bugs@racket-lang.org
Subject: Racket 6.2.1 failed to build on OS X 10.11 GM candidate

>Number:         15154
>Category:       mzscheme
>Synopsis:       Racket 6.2.1 failed to build on OS X 10.11 GM candidate
>Class:          sw-bug
>Responsible:    mflatt
>Severity:       serious
>Priority:       medium
>State:          closed
>Confidential:   no
>Arrival-Date:   Wed Sep 16 01:04:01 -0400 2015
>Closed-Date:    Sat Sep 19 11:25:52 -0400 2015
>Last-Modified:  Sat Sep 19 14:32:01 -0400 2015
>Originator:     Andrew Janke
>Organization:
plt
>Submitter-Id:   unknown
>Release:        6.2.1
>Environment:
mac-i386-osx
>Description:
Racket 6.2.1 is failing to build on my OS X 10.11 GM system. I first ran in to this while testing the formula under Mac Homebrew. https://github.com/Homebrew/homebrew/issues/43993 (That bug report includes full build logs.)

The build failure also happens outside Homebrew when I download the 6.2.1 distribution and try to build it manually.

I get errors like the following.

clang -g -O2   -I./.. -I./../include -DOS_X -D_DARWIN_UNLIMITED_SELECT -pthread  -fno-common -DUSE_SENORA_GC    -c xsrc/setjmpup.c -o setjmpup.o
env XFORM_USE_PRECOMP=xsrc/precomp.h ../racketcgc  -cqu ./xform.rkt --setup . --depends --cpp "clang -E -I./.. -I./../include -DOS_X -D_DARWIN_UNLIMITED_SELECT -pthread  -fno-common -DUSE_SENORA_GC   "  --keep-lines -o xsrc/sfs.c ./../src/sfs.c
clang -g -O2   -I./.. -I./../include -DOS_X -D_DARWIN_UNLIMITED_SELECT -pthread  -fno-common -DUSE_SENORA_GC    -c xsrc/sfs.c -o sfs.o
../racketcgc  -cqu ./xform.rkt --setup . --depends --cpp "clang -E -I../src -I./.. -I./../include -DOS_X -D_DARWIN_UNLIMITED_SELECT -pthread  -fno-common -DUSE_SENORA_GC   "  --keep-lines -o xsrc/string.c ./../src/string.c
clang -g -O2   -I./.. -I./../include -DOS_X -D_DARWIN_UNLIMITED_SELECT -pthread  -fno-common -DUSE_SENORA_GC    -c xsrc/string.c -o string.o
/System/Library/Frameworks/CoreFoundation.framework/Headers/CFData.h:65:56: error: expected ')'
__attribute__ ((availability (macosx , introduced = 10 _6 ) ) ) ; 
                                                       ^
/System/Library/Frameworks/CoreFoundation.framework/Headers/CFData.h:65:30: note: to match this '('
__attribute__ ((availability (macosx , introduced = 10 _6 ) ) ) ; 
                             ^
/System/Library/Frameworks/CoreFoundation.framework/Headers/CFCharacterSet.h:71:81: error: expected ')'
  kCFCharacterSetNewline __attribute__ ((availability (macosx , introduced = 10 _5 ) ) ) = 15 , 
                                                                                ^
/System/Library/Frameworks/CoreFoundation.framework/Headers/CFCharacterSet.h:71:55: note: to match this '('
  kCFCharacterSetNewline __attribute__ ((availability (macosx , introduced = 10 _5 ) ) ) = 15 , 
                                                      ^
/System/Library/Frameworks/CoreFoundation.framework/Headers/CFLocale.h:148:125: error: expected ')'
extern const CFStringRef kCFLocaleCurrentLocaleDidChangeNotification __attribute__ ((availability (macosx , introduced = 10 _5 ) ) ) ; 
                                                                       
>How-To-Repeat:
Install Mac OS X 10.11 GM candidate and Xcode 7 GM candidate.

Then:

wget http://mirror.racket-lang.org/installers/6.2.1/racket-minimal-6.2.1-src-builtpkgs.tgz
tar xf racket-minimal-6.2.1-src-builtpkgs.tgz
cd racket-6.2.1
cd src
./configure --disable-debug --disable-dependency-tracking --enable-macprefix --prefix=/tmp/test-racket
make
>Fix:
>Audit-Trail:
State changed from "open" to "closed" by mflatt at Sat, 19 Sep 2015 11:25:52 -0400
Reason>>> This problem is fixed for the next release by commit 1ddaad8d58.

To build v6.2.1, you could specify an alternate SDK with a
`configure` argument of the form `--enable-sdk6=...`. I'm
not sure of an approved source of older SDKs, though; my
updated XCode installation seems to have only the 10.11 SDK
(but I have older SDKs in various places on my filesystem).

From: Andrew Janke <floss@apjanke.net>
To: bugs@racket-lang.org
Cc: 
Subject: Re: [racket-bug] mzscheme/15154: Racket 6.2.1 failed to build on OS X
 10.11 GM candidate
Date: Sat, 19 Sep 2015 14:28:30 -0400

 Thanks!
 
 Emailing instead of commenting since I don't have a login on the bug 
 tracker and don't see how to make one.
 
 Older versions of Xcode can still be used and are still supported on 
 newer versions of OS X. They carry the older SDKs internally, and you 
 can use them either directly or by using `xcode-select` to switch to 
 that version of Xcode for all build tools.
 
 You can't download old Xcodes from the app store, but they are available 
 as standalone installers from https://developer.apple.com/downloads/. 
 The convention I've seen (and use myself) for installing multiple 
 versions side by side is to manually rename Xcode.app to 
 Xcode-<version>.app for all installations except the App Store-managed one.
 
 Cheers,
 Andrew
 
 On 9/19/15 11:25 AM, mflatt@racket-lang.org wrote:
 > State changed from "open" to "closed" by mflatt at Sat, 19 Sep 2015 11:25:52 -0400
 > Reason>>> This problem is fixed for the next release by commit 1ddaad8d58.
 >
 > To build v6.2.1, you could specify an alternate SDK with a
 > `configure` argument of the form `--enable-sdk6=...`. I'm
 > not sure of an approved source of older SDKs, though; my
 > updated XCode installation seems to have only the 10.11 SDK
 > (but I have older SDKs in various places on my filesystem).
 >
 >
 > View:
 >    http://bugs.racket-lang.org/query/?cmd=view&pr=15154
 >
 
